assets/css/styles.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    /* background-color: #36454F; */
    background-color: black;
    /*color: #3a3a3a;*/
    color: white;
}

/* causes everything to inherit bgc from its parent */
* * {
    background-color: inherit;
    color: inherit
}

/* header */
header {
    position: fixed;
    z-index: 99;
    width: 100%;
    padding: 0 1rem;
    display: flex;
    flex-direction: column;
    /*border-bottom: 3px solid #3a3a3a;*/
    border-bottom: 3px solid white;
}

header a {
    text-decoration: none;
    /*color: #3a3a3a;*/
    color: white;
}

#nav-toggle-label {
    width: 100vw;
    display: flex;
    flex-direction: row;
    align-items: center;
}

/* name should be changed in 
html and here to reflect that 
they are not together anymore */
#logo-tag-line {
    display: flex;
    flex-direction: column;
    flex-basis: 75%;
}

/* Font still needs to be chosen. */
#logo {
    white-space: nowrap;
    text-transform: capitalize;
    min-height: 1.5em;
    margin-top: .35em;
    /*margin-bottom: -.25em;*/
    flex-shrink: 1;
}

#tag-line {
    letter-spacing: .5px;
    min-height: 1.5em;
    margin-bottom: .25em;
    margin-top: -.25em;
    flex-shrink: 1;
}

/* this overlaps when looking at specific cell phones
    is there a way to do it with flex box? */
#icon-div {
    flex-basis: 20%;
}

#nav-toggle-icon {
    font-size: 225%;
    margin-bottom: -2.5rem;
    align-self: center;
    position: relative;
    top: 32%;
    left: 13%;
}

.active {
    /*border: 1.5px solid #3a3a3a;*/
    border: 1.5px solid white;
    padding: 1px 5px;
    border-radius: 5px;
}

#nav-menu {
    font-size: 110%;
    letter-spacing: 1.5px;
    list-style-type: none;
}

#nav-menu>li {
    margin-bottom: .2em;
}

nav {
    position: absolute;
    /*border-top: 3px solid #3a3a3a;
    border-bottom: 3px solid #3a3a3a;*/
    border-top: 3px solid white;
    border-bottom: 3px solid white;
    width: 100%;
    left: 0;
    padding-left: 1rem;
    padding-top: .7rem;
    padding-bottom: .35em;
    display: none;
    top: 100%;
    /*background-color: #E5E4E2;*/
    background-color: black;
}

#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

/* main */
main {
    /* sticks footer to bottom */
    flex: 1 0 auto;
    /*don't use vh for margin 
      use ems instead */
    margin-top: 7em;
    margin-bottom: 6em;
    /* why was this padding here? 
    padding-left: .75rem;*/
    align-items: center;
}

/* Landing page styles */
#landing-page {
    display: flex;
    flex-direction: column;
    margin-top: -3.6em;
    font-size: 99%;
}

#landing-page a {
    text-decoration: none;
    color: white;
}

#hero1 {
    background: url('../images/hero-images/hero1-img.jpg') no-repeat center center/cover;
}

#hero2 {
    background: url('../images/hero-images/hero2-img.jpg') no-repeat center center/cover;
}

#hero3 {
    background: url('../images/hero-images/hero3-img.jpg') no-repeat center center/cover;
    display: none;
}

.hero-div {
    height: 600px;
    width: 100%;
    display: flex;
    position: relative;
}

.landing-page-text {
    display: flex;
    flex-direction: column;
    /* this syle needs to be addressed later */
    background-color: rgba(0, 0, 0, 0.6);
    width: 60%;
    padding: 10px;
    border-radius: 10px;
    position: absolute;
    width: auto;
    height: fit-content;
}

.transparent-background {
    background: transparent;
}

.centered-text {
    text-align: center;
}

.hover-border:hover {
    /*border-bottom: 1.5px solid #3a3a3a;*/
    border: 1.5px solid white;
    border-radius: 10px;
}

/* positions cover-text for hero1 image */
#hero1-text1 {
    top: 4em;
    left: 1em;
    white-space: nowrap;
}

#hero1-text2 {
    bottom: 11em;
    right: 1em;
}

#hero2-text {
    top: 7.5em;
    width: 37%;
    left: .5em;
}

#new-player-info {
    top: 7.5em;
    width: 37%;
    position: absolute;
    right: .5em;
}

#two-player-info {
    position: absolute;
    top: 16.3em;
    width: 64%;
    left: 4em;
}

#fav-games-info {
    position: absolute;
    top: 24em;
    width: 82%;
    left: 2em;
}

#mailing-list {
    position: absolute;
    bottom: 4.4em;
    left: 3em;
}

/* content pages styling */
.container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    position: relative;
    margin-bottom: 22px;
}

.game-cover {
    height: 65vw;
    width: 65vw;
    margin-top: 2em;
    margin-bottom: 2em;
    /* Makes the square image into a circle */
    border-radius: 18%;
    max-width: 300px;
    max-height: 300px;
    align-self: center;
}

.box {
    /*border: 3px solid #3a3a3a;*/
    /*background-color: #E5E4E2;*/
    background-color: black;
    border: 3px solid white;
    border-radius: 10px;
}

.content-header {
    margin: 1vh;
    margin-bottom: -.5vh;
    position: relative;
    left: 3vw;
    width: fit-content;
    padding: .3rem 1rem .3rem 1rem;
}

.content {
    margin: 2vh;
    max-width: 80vw;
    padding: .7rem .7rem 2rem .7rem;
    align-self: center;
}

.links {
    list-style-type: none;
    display: flex;
    position: relative;
    /* width: fit-content; */
    align-items: center;
    justify-content: space-around;
    padding: 0.7rem 0;
    margin-left: 3rem;
    margin-right: 3rem;
}

.links a {
    text-decoration: none;
}

.links a:hover {
    /*border-bottom: 1.5px solid #3a3a3a;*/
    border-bottom: 1.5px solid white;
}


.bgg-logo {
    height: 50px;
    width: 72px;
    position: absolute;
    left: 42px;
}

.susd-logo {
    height: 50px;
    width: 50px;
    position: absolute;
    left: 140px;
}

.dt-logo {
    height: 63px;
    width: 50px;
    position: absolute;
    right: 45px;
    top: -8px;
}

/*
.content-div, .content-p {
    display: flex;
    justify-content: center;
}

.content-p {
    border: 3px solid #3a3a3a;
    border-radius: 10px;
    background-color: #E5E4E2;
    background-color: black;
    margin: 2vh;
    max-width: 80vw;
    padding: .7rem .7rem 2rem .7rem;
}
*/

/* form styles */
#signup-section {
    display: flex;
    flex-direction: column;
    flex-shrink: 1;
}

#signup-form {
    display: flex;
    flex-direction: column;
    padding: 1.5em;
    border-radius: 18%;
    width: 90%;
    align-self: center;
    align-items: center;
    gap: 10px;
}

#noninput-form-elements {
    /*display: flex;
    flex-direction: column;*/
    width: 60%;
}

#noninput-form-elements h2,
h4 {
    text-justify: center;
}

#input-fields {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.text-field {
    margin-top: 10px;
}

/* footer */

footer {
    position: fixed;
    bottom: 0;
    width: 100vw;
    z-index: 99;
}

#social-networks {
    /*border-top: 3px solid #3a3a3a;*/
    border-top: 3px solid white;
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    /* color: #3a3a3a;*/
    color: white;
}

@media screen and (min-width: 340px) {
    #logo {
        letter-spacing: 3px;
    }
}

@media screen and (min-width: 768px) {

    /* Header */
    header {
        border-bottom: none;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
    }

    nav,
    #social-networks {
        display: flex;
        position: relative;
        /* border-color: #3a3a3a;*/
        border: 3px solid white;
        border-radius: 10px;
        width: fit-content;
        padding: .35rem .7rem;
        /*background-color: #E5E4E2;*/
        background-color: black;
        justify-content: space-around;
    }

    #nav-menu {
        display: flex;
        /*background-color: #E5E4E2;*/
    }

    #nav-menu>li {
        padding: 0rem 1rem;
        text-align: center;
    }

    #nav-toggle-label {
        flex-direction: column;
    }

    #logo {
        font-size: 3rem;
        line-height: 75px;
        margin: 0 0.5rem;
    }

    #tag-line,
    #logo {
        display: flex;
        justify-content: center;
    }

    #icon-div {
        display: none;
    }

    /* main content */
    main {
        /* push main content down */
        margin-top: 155px;
        display: flex;
        justify-content: center;
    }

    /* Landing page */
    #landing-page {
        width: 100%;
    }

    #hero1,
    #hero2 {
        display: none;
    }

    #hero3 {
        display: flex;
    }

    #hero1-text1 {
        top: 8%;
        left: 8%;
        white-space: nowrap;
        font-size: 140%;
    }

    #hero1-text2 {
        top: 9%;
        right: 8%;
        font-size: 113%;
        height: fit-content;
    }

    #hero2-text {
        position: absolute;
        top: 9em;
        left: 5em;
        width: 31%;
        font-size: 118%;
    }

    #new-player-info {
        position: absolute;
        top: 17em;
        right: 28em;
        width: 29%;
    }

    #two-player-info {
        position: absolute;
        top: 23em;
        left: 6.5em;
        width: 29%;
    }

    #fav-games-info {
        position: absolute;
        top: 17.5em;
        left: 27em;
        width: 38%;
    }

    #mailing-list {
        position: absolute;
        position: absolute;
        bottom: 13em;
        left: 30em;
    }

    /* this lines up the top of the images in larger screens*/
    .section-content {
        display: flex;
        justify-content: space-around;
        align-items: flex-start;
        /* not sure if this is the right factor that I want */
        gap: 1rem;
    }

    /* resizes game cover image to something fixed */
    .game-cover {
        height: 12em;
        width: 12em;
    }

    .links {
        padding: 0.7rem 1rem;
        margin-left: 2rem;
        margin-right: 2rem;
        gap: 15px;
    }

    /* footer */
    footer {
        display: flex;
        justify-content: center;
    }

    #social-networks {
        display: flex;
        /*background-color: #E5E4E2;*/
        background-color: black;
        margin: 1em;
        padding: 1rem;
        min-width: 50vw;
        /*border: 3px solid #3a3a3a;*/
        border: 3px solid white;
        border-radius: 10px;
        justify-content: space-around;
    }
}

/* media query: laptop and larger (992px)*/
/* I changed the number of pixels since my screen has a smaller width.
   I am not sure what this media query should be set to.*/
@media screen and (min-width: 916px) {
    #nav-menu a:hover {
        /*border-bottom: 1.5px solid #3a3a3a;*/
        border-bottom: 1.5px solid white;
    }

    /* this causes the container around social links to bulge
        so it is commented out until I fix the dimensions of
        #social-networks
    #social-networks i:hover {
        border: 1.5px solid #3a3a3a;
        padding: 1px 5px;
        border-radius: 5px;
    }*/
}

